fixed responsive footer on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   }
 }
 
+.card-shadow {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
 .active {
   @apply border-b-2 border-yellow-400;
 }
